<resources>
    <string name="app_name">AppFromZero</string>
    <string name="create_project_fragment">Create Project Fragment</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="logout_fragment">Logout Fragment</string>
    <string name="logout">Cerrar sesión</string>
    <string name="support">Soporte</string>
    <string name="create_project">Crear Proyecto</string>
    <string name="notificantions">Notificaciones</string>
    <string name="message_fragment">Message Fragment</string>
    <string name="notification_fragment">Notifications Fragment</string>
    <string name="search_fragment">Search Fragment</string>
    <string name="support_fragment">Support Fragment</string>
    <string name="notifications">Notificaciones</string>
    <string name="sitio_web">Sitio Web</string>
    <string name="resumen">Resumen</string>
    <string name="la_plataforma_para_tus_sue_os_digitales">La plataforma para tus sueños digitales</string>
    <string name="adelante">Adelante</string>
    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="olvidaste_tu_contrase_a">¿Olvidaste tu contraseña?</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="user">Correo</string>
    <string name="password">Contraseña</string>
    <string name="volver">Volver</string>
    <string name="Volver">Volver</string>
    <string name="siguiente"><![CDATA[Siguiente ->]]></string>
    <string name="elige_tu_tipo_de_usuario">Elige tu tipo de usuario</string>
    <string name="dev">Desarrollador</string>
    <string name="empresas">Empresas</string>
    <string name="usuario">Usuario</string>
    <string name="email">Correo</string>
    <string name="envia_un_correo_para_cambiar_tu_contrase_a">Envia un correo para cambiar tu contraseña</string>
    <string name="empresa">Empresa</string>
    <string name="contrase_a">Contraseña</string>
    <string name="descripcion_del_problema">Descripcion del problema</string>
    <string name="adjuntar_archivos_opcional">Adjuntar archivos (opcional)</string>
    <string name="enviar">Enviar</string>
    <string name="tipo_de_problema">Tipo de Problema</string>
    <string name="titulo">Título</string>
    <string name="descripcion">Descripción</string>
    <string name="crear_un_entregable">Crear un entregable</string>
    <string name="fecha_limite">Fecha límite</string>
    <string name="crear">Crear</string>
    <string name="cancelar">Cancelar</string>
    <string name="eliminar">Eliminar</string>
    <string name="editar">Editar</string>
    <string name="editar_un_entregable">Editar un entregable</string>
    <string name="seleccionar_fecha">Añadir fecha</string>
    <string name="fecha_limite_titulo">Fecha límite</string>
    <string name="entregables">Entregables</string>
    <string name="description">Plataforma de Comercio Electrónico Geekit</string>
    <string name="destinatario">Destinatario</string>
    <string name="titulo_de_mensaje">Titulo de mensaje</string>
    <string name="asunto">Asunto\n</string>
    <string name="mensaje">Mensaje\n</string>
    <string name="Create_proyect">Crear un nuevo proyecto</string>
    <string name="Title">Titulo</string>
    <string name="tecnologias_lenguajes">Tecnologías/Lenguajes</string>
    <string name="tecnologias_frameworks">Tecnologías/Frameworks</string>
    <string name="presupuesto">Presupuesto</string>
    <string name="procesos_metodologias">Procesos y Metodologías de Desarrollo</string>
    <string name="state_icon">State icon</string>
    <string name="date_icon">Date icon</string>
    <string name="no_hay_entregables">No hay entregables</string>
    <string name="sigue_el_avance_de_tu_proyecto">Sigue el avance de tu proyecto</string>
    <string name="report_icon">report icon</string>
    <string name="add_deliverable_icon">add deliverable icon</string>
    <string name="resume">Resume:</string>
    <string name="geekit_pe">Geekit.pe</string>
    <string name="plataforma_de_comercio_nelectr_nico_geekit">Plataforma de Comercio Electrónico Geekit</string>
    <string name="skills">Especialidades:</string>
    <string name="encuentra_al_desarrollador_ideal">Encuentra al desarrollador ideal</string>
    <string name="buscar_proyectos">Buscar proyectos</string>
    <string name="from_zero_logo">From Zero Logo</string>
    <string name="especialidades">Especialidades</string>
    <string name="registrar">Registrar\n</string>
    <string name="enterprise_name">enterprise_name</string>
    <string name="last_name">last_name</string>
    <string name="first_name">first_name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="iniciar_sesi_n">Iniciar Sesión</string>

    <string name="aplicantes">Aplicantes</string>
    <string name="bot_n_de_cambio_de_foto_de_perfil">Botón de cambio de foto de perfil</string>
    <string name="nombres">Nombres</string>
    <string name="apellidos">Apellidos</string>
    <string name="nombre_de_la_empresa">Nombre de la empresa</string>
    <string name="acci_n_realizada_con_xito">Acción realizada con éxito</string>
    <string name="aceptar">Aceptar</string>
    <string name="ups_parece_que_ocurrio_un_error">Ups! Parece que ocurrio un error</string>

    <string name="revisar">Revisar</string>
    <string name="revisar_entregable">Revisar entregable</string>
    <string name="descripci_n_de_la_entrega">Descripción de la entrega</string>
    <string name="aprobar">Aprobar</string>
    <string name="rechazar">Rechazar</string>
    <string name="terminar_proyecto">Terminar Proyecto</string>

</resources>