<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.fragments.RecoveryPasswordFragment">

    <!-- TODO: Update blank fragment layout -->
    <ImageView
        android:id="@+id/fondo_start"
        android:layout_width="860dp"
        android:layout_height="985dp"
        android:src="@drawable/ic_start_design"
        android:translationX="-208dp"
        android:translationY="-630dp" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="215dp"
        android:layout_height="175dp"
        android:src="@drawable/ic_logo"
        android:translationX="90dp"
        android:translationY="40dp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/envia_un_correo_para_cambiar_tu_contrase_a"
        android:textAlignment="center"
        android:textColor="@color/green_fromzero"
        android:textSize="34sp"
        android:textStyle="bold"
        android:translationY="350dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:textColorHint="@color/green_fromzero"
        android:translationX="20dp"
        android:translationY="450dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_line"
            android:hint="@string/usuario"
            android:textColor="@color/green_fromzero" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/bt_IniciarSesion"
        android:layout_width="264dp"
        android:layout_height="82dp"
        android:text="@string/enviar"
        android:textSize="34sp"
        android:textStyle="bold"
        android:translationX="80dp"
        android:translationY="540dp" />

    <LinearLayout
        android:id="@+id/ll_Volver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="clip_horizontal|center|end"
        android:orientation="horizontal"
        android:translationY="680dp">

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="32dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#00FFFFFF"
            android:src="@drawable/ic_arrow_left" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/volver"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

</FrameLayout>