<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.fragments.LogInFragment"
    android:background="@color/white"
    >

    <ImageView
        android:id="@+id/fondo_start"
        android:layout_width="860dp"
        android:layout_height="985dp"
        android:src="@drawable/ic_start_design"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:translationX="-208dp"
        android:translationY="-630dp" />
    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="215dp"
        android:layout_height="175dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/ic_logo"
        android:translationY="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bt_IniciarSesion"
        android:layout_width="220dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:text="@string/iniciar_sesi_n"
        android:textSize="27sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPassword" />

    <TextView
        android:id="@+id/tv_OlvidarContra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/olvidaste_tu_contrase_a"
        android:textColor="@color/green_fromzero"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_IniciarSesion" />

    <TextView
        android:id="@+id/tv_CrearCuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/crear_cuenta"
        android:textColor="@color/green_fromzero"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_OlvidarContra" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tvPassword"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:passwordToggleEnabled="true"
        app:layout_constraintTop_toBottomOf="@+id/tvUser">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_line"
            android:hint="@string/password"
            android:textColor="@color/green_fromzero"
            android:textSize="17sp"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tvUser"
        android:layout_width="350dp"
        android:layout_height="61dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView11">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_line"
            android:hint="@string/user"
            android:textColor="@color/green_fromzero"
            android:textSize="17sp"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/ll_Volver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="32dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#00FFFFFF"
            android:src="@drawable/ic_arrow_left"
            app:tint="#FFFFFF" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Volver"
            android:textColor="@color/ic_launcher_background"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>