<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvMessageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="165dp"
        android:text="@string/descripci_n_de_la_entrega"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvReviewTitle" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="46dp"
        android:padding="10dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardCornerRadius="4dp"
        app:cardElevation="0dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMessageTitle">

        <TextView
            android:id="@+id/tvDeveloperMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_date_input"
            android:padding="12dp"
            android:text="TextView"
            tools:text="Se entregó un prototipo interactivo de la interfaz de usuario de la Plataforma de Comercio Electrónico Geekit. Este prototipo permitire a los stakeholders visualizar y navegar por las diferentes pantallas y funcionalidades de la aplicación, proporcionando una representación visual de cómo se verá y funcionará la plataforma final." />
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btApprove"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/white"
        android:text="@string/aprobar"
        android:textColor="@color/Cyan"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/btReject"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:strokeColor="@color/material_dynamic_neutral80"
        app:strokeWidth="1sp" />

    <Button
        android:id="@+id/btReject"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="@color/white"
        android:text="@string/rechazar"
        android:textColor="@color/red_fromzero"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btApprove"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:strokeColor="@color/material_dynamic_neutral80"
        app:strokeWidth="1sp" />

    <Button
        android:id="@+id/btCancel"
        android:layout_width="321dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/white"
        android:text="@string/cancelar"
        android:textColor="@color/primary_text_color"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btApprove"
        app:layout_constraintVertical_bias="0.0"
        app:strokeColor="@color/material_dynamic_neutral80"
        app:strokeWidth="1sp" />

    <TextView
        android:id="@+id/tvReviewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textSize="30sp"
        android:text="@string/revisar_entregable"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>